Roughly got everything, move to testing and documentation